<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Congress API</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="app_title">Congress API</string>

    <string name="nav_legislators">Legislators</string>
    <string name="nav_bills">Bills</string>
    <string name="nav_committees">Committees</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_about_me">About Me</string>

    <string-array name="nav_item_activity_titles">
        <item>Legislators</item>
        <item>Bills</item>
        <item>Committees</item>
        <item>Favorites</item>
    </string-array>

    <string name="setting">Settings</string>
    <string name="activity_title_about_me">About Me</string>
    <string name="activity_legislator_detail">Legislator Info</string>
    <string name="activity_bill_detail">Bill Info</string>
    <string name="activity_comm_detail">Committee Info</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

</resources>
